--- a/css/style.css
+++ b/css/style.css
@@ -19,11 +19,12 @@
 .pwd-item{
   padding: 0.2rem;
   display: inline-block;
+  border-radius: 5px;
   transition: background-color 350ms ease;
 }
 
 .copied{
-  background-color: lightgreen;
+  background-color: #a6e22e;
   color: black;
   transition: background-color 150ms ease;
 }
@@ -37,12 +38,13 @@
 .theme-switch-wrapper {
   display: flex;
   align-items: center;
+  margin-top: 10px;
   margin-bottom: 0;
 }
 
 .theme-switch {
   display: inline-block;
-  height: 21px;
+  height: 20px;
   position: relative;
   width: 40px;
 }
@@ -52,7 +54,7 @@
 }
 
 .slider {
-  background-color: #ccc;
+  background-color: #c0c0c0;
   bottom: 0;
   cursor: pointer;
   left: 0;
@@ -63,7 +65,7 @@
 }
 
 .slider:before {
-  background-color: white;
+  background-color: #f8f8f2;
   bottom: 2px;
   content: "";
   height: 16px;
@@ -122,7 +124,7 @@ input {
   justify-content: center;
   width: 24px;
   height: 24px;
-  background-color: #2196F3;
+  background-color: #66d9ef;
   border: none;
   border-radius: 50%;
   cursor: pointer;
@@ -130,13 +132,7 @@ input {
 }
 
 .circle-button:hover {
-  background-color: #1976D2;
-}
-
-.arrow-icon {
-  width: 24px;
-  height: 24px;
-  color: white;
+  background-color: #a6e22e;
 }
 
 .link-button-container {
