--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
 .fira-mono-regular {
   font-family: "Fira Mono", monospace;
   font-weight: 400;
@@ -50,7 +54,10 @@
 }
 
 .theme-switch input {
-  display: none;
+  opacity: 0;
+  width: 0;
+  height: 0;
+  position: absolute;
 }
 
 .slider {
@@ -73,6 +80,11 @@
   position: absolute;
   transition: 0.4s;
   width: 16px;
+}
+
+input:focus-visible + .slider {
+  outline: 2px solid #2196F3;
+  outline-offset: 2px;
 }
 
 input:checked + .slider {
@@ -102,6 +114,7 @@ input {
   display: flex;
   flex-direction: column;
   gap: 10px;
+  margin-bottom: 4px;
 }
 
 .input-container div {
@@ -143,6 +156,12 @@ input {
 
 .theme-label {
   margin-left: 5px;
+}
+
+.toggle-container {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px; /* Adds space between toggles */
 }
 
 ol {
