--- a/css/dough.css
+++ b/css/dough.css
@@ -24,12 +24,6 @@
   text-align: left !important;
 }
 
-.switch-placeholder {
-  display: inline-block;
-  width: 40px;
-  height: 20px;
-}
-
 #sourdough-section input,
 #preferment-section input,
 #dough-section input,
@@ -91,6 +85,7 @@
 #recipe-data-section {
   display: flex;
   flex-direction: column;
+  margin-bottom: 25px;
 }
 
 #recipe-data-section textarea {
@@ -103,7 +98,6 @@
 }
 
 .load-btn {
-  margin-left: 10px;
   height: 24px;
   align-self: flex-start;
 }
